--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -153,9 +153,9 @@
                 <a class="nav-link" th:href="@{/alumno/observaciondiaria/listar}">
                     <i class="bi bi-journal-text me-2"></i>Observaciones
                 </a>
-                <a class="nav-link" th:href="@{/alumno/evaluacion/listar}">
-                    <i class="bi bi-clipboard-check me-2"></i>Evaluaciones
-                </a>
+                <a class="nav-link" th:href="@{/admin/evaluaciones/listar}">
+				    <i class="bi bi-briefcase me-2"></i>Mis evaluaciones
+				</a>
               <!--   <a class="nav-link" th:href="@{/alumno/evaluacion/incidencia}">
                     <i class="bi bi-exclamation-triangle me-2"></i>Incidencias
                 </a> -->
