--- a/src/main/resources/templates/alumno/dashboard.html
+++ b/src/main/resources/templates/alumno/dashboard.html
@@ -109,7 +109,7 @@
                 <div class="card text-white bg-primary">
                     <div class="card-body text-center">
                         <i class="bi bi-clipboard-check"></i>
-                        <h3>0</h3>
+                        <h3 th:text="${evaluacionTotal}">0</h3>
                         <h6>Evaluaciones</h6>
                     </div>
                 </div>
