--- a/src/main/resources/templates/alumno/observaciondiaria/form.html
+++ b/src/main/resources/templates/alumno/observaciondiaria/form.html
@@ -129,13 +129,24 @@
                             <div class="row mt-4">
                                 <div class="col-12">
                                     <div class="d-flex gap-2">
+                                     <div th:if="${!#lists.contains(#authentication.authorities.![authority], 'TUTOR_CURSO')}">
                                         <button type="submit" class="btn btn-primary px-4">
                                             <i class="fas fa-save"></i>
+      
                                             <span th:text="${observacionDiaria.id != null} ? 'Actualizar' : 'Guardar'">Guardar</span>
-                                        </button>
-                                        <a th:href="@{/alumno/observaciondiaria/listar}" class="btn btn-secondary px-4">
-                                            <i class="fas fa-times"></i> Cancelar
-                                        </a>
+                                        </button> 
+                                        
+                                     </div>
+                                        <div th:if="${#lists.contains(#authentication.authorities.![authority], 'TUTOR_CURSO')}">
+                                        	<a th:href="@{/tutorcurso/observaciondiaria/listar}" class="btn btn-secondary px-4">
+                                            	<i class="fas fa-times"></i> Cancelar
+                                        	</a>
+                                        </div>
+                                        <div th:if="${!#lists.contains(#authentication.authorities.![authority], 'TUTOR_CURSO')}">
+                                        	<a th:href="@{/alumno/observaciondiaria/listar}" class="btn btn-secondary px-4">
+                                            	<i class="fas fa-times"></i> Cancelar
+                                        	</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
