--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -123,6 +123,9 @@
                 <a class="nav-link" th:href="@{/evaluaciontutor/listar}">
 				    <i class="bi bi-briefcase me-2"></i>Evaluaciones Tutor
 				</a>
+				<a th:href="@{/incidencia/listar}	" class="nav-link">
+                    <i class="bi bi-exclamation-triangle me-2"></i>Incidencia
+                 </a>	
             </div>
             
             <!-- Tutor Prácticas Menu -->
@@ -136,9 +139,9 @@
                  <a th:href="@{/incidencia/listar}	" class="nav-link">
                     <i class="bi bi-exclamation-triangle me-2"></i>Incidencia
                  </a>
-                 <a th:href="@{/enconstruccion}	" class="nav-link">
-                    <i class="bi bi-clipboard-check me-2"></i>Evaluación
-                 </a>
+                  <a class="nav-link" th:href="@{/admin/evaluaciones/listar}">
+				    <i class="bi bi-briefcase me-2"></i>Evaluaciones
+				</a>
                 
             </div>
             
